[workspace]
resolver = "2"
members = [
    "crates/load-balancer",
    "crates/clients/client-1",
    "crates/clients/client-2",
    "crates/clients/client-3",
    "crates/servers/server-1",
    "crates/servers/server-2",
    "crates/servers/server-3"
]
[workspace.dependencies]
tonic = "*"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[workspace.build-dependencies]
tonic-build = "*"

[workspace.package]
authors = ["Balasubramanyam Karri"]
repository = "https://github.com/karribalu/rs-prequal"
edition = "2021"
