[workspace]
resolver = "2"
members = [
    "crates/load-balancer",
    "crates/clients/client-1",
    "crates/clients/client-2",
    "crates/clients/client-3",
    "crates/servers/server-1",
    "crates/servers/server-2",
    "crates/servers/server-3",
    "crates/utils"
]
[workspace.dependencies]
tonic = "*"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
thiserror = "2.0.10"
utils = { path = "crates/utils" }
tracing = "0.1"
tracing-subscriber = "0.3"
#dotenv = "0.15.0"
serde = { version = "1.0.217", features = ["derive"] }
envy = "0.5.0"

[workspace.build-dependencies]
tonic-build = "*"

[workspace.package]
authors = ["Balasubramanyam Karri"]
repository = "https://github.com/karribalu/rs-prequal"
edition = "2021"
