[package]
name = "load-balancer"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
utils = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true }
envy = { workspace = true }
rand = { workspace = true }
hyper = { version = "1.5.2", features = ["full"] }
axum = "0.7"
hyper-util = { version = "0.1.10", features = ["full"] }
http = "0.2"


[build-dependencies]
tonic-build = "*"
