[package]
name = "server-2"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
utils = { workspace = true }
tracing = {workspace = true}
tracing-subscriber = {workspace = true}


[build-dependencies]
tonic-build = "*"